--- a/src/BlazingPizza.Client/Pages/ChartTest.razor
+++ b/src/BlazingPizza.Client/Pages/ChartTest.razor
@@ -1,10 +1,14 @@
-﻿@page "/charttest"
+@page "/charttest"
 
-<h3>ChartTest</h3>
+<title>ChartTest</title>
+<p>
+    <Button class="btn-outline-primary" Clicked="@(async () => await HandleRedraw())">Redraw</Button>
+</p>
 
-<Button class="btn-outline-primary" Clicked="@(async () => await HandleRedraw())">Redraw</Button>
+<div>
+    <LineChart @ref="lineChart" TItem="double"/>
+</div>
 
-<LineChart @ref="lineChart" TItem="double" />
 @*<Chart @ref="barChart" Type="ChartType.Bar" TItem="double" Clicked="@OnClicked" />*@
 
 @code{
@@ -18,10 +22,9 @@
     //    Console.WriteLine($"{model.X}-{model.Y}");
     //}
 
-
-    protected override async Task OnAfterRenderAsync( bool firstRender )
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if ( firstRender )
+        if (firstRender)
         {
             await HandleRedraw();
         }
@@ -31,9 +34,9 @@
     {
         lineChart.Clear();
 
-        lineChart.AddLabel( Labels );
+        lineChart.AddLabel(Labels);
 
-        lineChart.AddDataSet( GetLineChartDataset() );
+        lineChart.AddDataSet(GetLineChartDataset());
 
         await lineChart.Update();
     }
@@ -53,13 +56,13 @@
     }
 
     string[] Labels = { "Red", "Blue", "Yellow", "Green", "Purple", "Orange" };
-    List<string> backgroundColors = new List<string> { ChartColor.FromRgba( 255, 99, 132, 0.2f ), ChartColor.FromRgba( 54, 162, 235, 0.2f ), ChartColor.FromRgba( 255, 206, 86, 0.2f ), ChartColor.FromRgba( 75, 192, 192, 0.2f ), ChartColor.FromRgba( 153, 102, 255, 0.2f ), ChartColor.FromRgba( 255, 159, 64, 0.2f ) };
-    List<string> borderColors = new List<string> { ChartColor.FromRgba( 255, 99, 132, 1f ), ChartColor.FromRgba( 54, 162, 235, 1f ), ChartColor.FromRgba( 255, 206, 86, 1f ), ChartColor.FromRgba( 75, 192, 192, 1f ), ChartColor.FromRgba( 153, 102, 255, 1f ), ChartColor.FromRgba( 255, 159, 64, 1f ) };
+    List<string> backgroundColors = new List<string> { ChartColor.FromRgba(255, 99, 132, 0.2f), ChartColor.FromRgba(54, 162, 235, 0.2f), ChartColor.FromRgba(255, 206, 86, 0.2f), ChartColor.FromRgba(75, 192, 192, 0.2f), ChartColor.FromRgba(153, 102, 255, 0.2f), ChartColor.FromRgba(255, 159, 64, 0.2f) };
+    List<string> borderColors = new List<string> { ChartColor.FromRgba(255, 99, 132, 1f), ChartColor.FromRgba(54, 162, 235, 1f), ChartColor.FromRgba(255, 206, 86, 1f), ChartColor.FromRgba(75, 192, 192, 1f), ChartColor.FromRgba(153, 102, 255, 1f), ChartColor.FromRgba(255, 159, 64, 1f) };
 
     List<double> RandomizeData()
     {
-        var r = new Random( DateTime.Now.Millisecond );
+        var r = new Random(DateTime.Now.Millisecond);
 
-        return new List<double> { r.Next( 3, 50 ) * r.NextDouble(), r.Next( 3, 50 ) * r.NextDouble(), r.Next( 3, 50 ) * r.NextDouble(), r.Next( 3, 50 ) * r.NextDouble(), r.Next( 3, 50 ) * r.NextDouble(), r.Next( 3, 50 ) * r.NextDouble() };
+        return new List<double> { r.Next(3, 50) * r.NextDouble(), r.Next(3, 50) * r.NextDouble(), r.Next(3, 50) * r.NextDouble(), r.Next(3, 50) * r.NextDouble(), r.Next(3, 50) * r.NextDouble(), r.Next(3, 50) * r.NextDouble() };
     }
 }
