--- a/ADPHI/Client/Pages/Index.razor
+++ b/ADPHI/Client/Pages/Index.razor
@@ -1,9 +1,8 @@
 @page "/"
 @attribute [Authorize]
 
-<div class="content">
-
-    <div id="Header">
+<div>
+    <div>
         <div id="SearchComponent">
             @*UNDONE:検索コンポーネント*@
         </div>
@@ -49,4 +48,3 @@
         </RadzenGrid>
     </div>
 </div>
-
