--- a/ADPHI/Client/Shared/MainLayout.razor
+++ b/ADPHI/Client/Shared/MainLayout.razor
@@ -1,34 +1,42 @@
 @inherits LayoutComponentBase
 
 <header>
-    <div style="display:inline-flex" class="d-flex align-items-center justify-content-center">
-        <a href=""><img class="logo" src="img/ANDEN_LOGO_light.svg"></a>
-        <h3 class="m-2">工数管理指標WEB</h3>
-        <h5 class="m-2">Version @appState.AppVersion</h5>
+    <div class="nav-container">
+        <div style="display:inline-flex" class="d-flex align-items-center justify-content-center">
+            <a href=""><img class="logo" src="img/ANDEN_LOGO_light.svg"></a>
+            <h3 class="m-2">工数管理指標WEB</h3>
+            <h5 class="m-2">Version @appState.AppVersion</h5>
+        </div>
+
+        <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
+            <RadzenIcon Icon="home" Style="color:white;font-size:48px" />
+            <div>TOP</div>
+        </NavLink>
+
+        <NavLink href="people" class="nav-tab">
+            @*<RadzenIcon Icon="people" Style="color:white;font-size:48px"/>*@
+            <img src="img/database-light.svg" />
+            <div>People Masta</div>
+        </NavLink>
+
+        <NavLink href="counter" class="nav-tab">
+            <RadzenIcon Icon="add_circle_outline" Style="color:white;font-size:48px" />
+            <div>Counter</div>
+        </NavLink>
+
+        <NavLink href="charttest" class="nav-tab">
+            <img src="img/chart_light.svg" />
+            <div>Chart</div>
+        </NavLink>
+
+        <div style="padding-right:10px;">
+            <LoginDisplay />
+        </div>
     </div>
 
-    <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
-        <RadzenIcon Icon="home" Style="color:white;font-size:48px"/>
-        <div>TOP</div>
-    </NavLink>
-
-    <NavLink href="people" class="nav-tab">
-        @*<RadzenIcon Icon="people" Style="color:white;font-size:48px"/>*@
-        <img src="img/database-light.svg"/>
-        <div>People Masta</div>
-    </NavLink>
-
-    <NavLink href="counter" class="nav-tab">
-        <RadzenIcon Icon="add_circle_outline" Style="color:white;font-size:48px"/>
-        <div>Counter</div>
-    </NavLink>
-
-    <NavLink href="charttest" class="nav-tab">
-        <img src="img/chart_light.svg"/>
-        <div>Chart</div>
-    </NavLink>
-
-    <LoginDisplay/>
+    @*<div class="progress-container">
+            <div class="progress-bar" id="myBar"></div>
+        </div>*@
 </header>
 
 <div class="content">
@@ -37,9 +45,9 @@
     </CascadingValue>
 </div>
 
-<footer>
-    <p>AD-PHI</p>
-</footer>
+@*<footer>
+        <p>AD-PHI</p>
+    </footer>*@
 
 @code{
     AppState appState = new AppState();
