--- a/ADPHI/Client/wwwroot/css/site.css
+++ b/ADPHI/Client/wwwroot/css/site.css
@@ -5,6 +5,7 @@
 * {
     margin: 0;
     padding: 0;
+    /*box-sizing: border-box;*/
 }
 /*#endregion */
 
@@ -14,21 +15,24 @@
     --input-padding-y: .75rem;
 }
 
+html {
+    /*overflow: auto;*/
+    /*height: 100%;*/
+}
+
 body {
-    /*flex-direction: column;*/
-    font-family: "Meiryo UI","ＭＳ Ｐゴシック","quicksand", "MS PGothic", sans-serif;
-    font-size: 80%;
     /*background: linear-gradient(to right, #0062E6, #33AEFF);*/
-    min-height: 100vh;
+    font-family: "Meiryo UI","ＭＳ Ｐゴシック","quicksand", "MS PGothic", "sans-serif";
+    font-size: 80%;
+    /*min-height: 100vh;
     position: relative;
     padding-top: 5rem;
     padding-bottom: 40px;
-    box-sizing: border-box;
+    display: flex;
+    height: 100%;
+    flex-direction: column;*/
 }
 
-html {
-    overflow:auto;
-}
 
 /*#endregion */
 
@@ -61,50 +65,49 @@ address {
     font-style: normal;
 }
 
-.main {
-    flex-grow: 1;
-    /*overflow-y: auto;*/
-    background: linear-gradient(rgba(0,0,0,0) 40%, rgba(0,0,0,0.4) 80%);
-    padding: 1.5rem !important;
-}
-
 
 header {
-    height: 5rem;
-    background-color: rgb(66, 107, 239);
-    background-image: linear-gradient(rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 70%);
-    display: flex;
-    align-items: stretch;
-    color: white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.4);
-    padding: 0 3rem;
+    /*height: 53px;*/
+    width: 100%;
     position: fixed;
     top: 0;
-    right: 0;
     left: 0;
-    z-index: 1030;
+    color: white;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.4);
+    background-color: rgb(66, 107, 239);
+    background-image: linear-gradient(rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 70%);
 }
 
+.progress-container {
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+}
+
+.progress-bar {
+    height: 8px;
+    background: #4caf50;
+    width: 0%;
+}
 
 .content {
-    display: flex;
+    /*display: flex;
     height: 100%;
-    z-index: 1;
-    overflow-y: auto;
+    z-index: 1;*/
+    height: 100vh;
+    overflow: scroll;
+    /*margin-top: 53px;*/
 }
 
-
 footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
     background-color: #89c7de;
     color: #fff;
     text-align: center;
-    /*padding: 10px 0;*/
-    position: absolute;
-    bottom: 0;
-    line-height: 40px;
 }
-
 
 /*#endregion */
 
@@ -115,13 +118,17 @@ footer {
     margin-right: 1rem;
 }
 
+.nav-container {
+    display: flex;
+}
+
 .nav-tab {
     margin: 0;
     padding: 0.3rem 1.8rem;
     display: inline-block;
     background-color: rgba(0,0,0,0.1);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     font-size: 0.9rem;
